set up data binding

--- a/app/src/main/res/layout/item_dog.xml
+++ b/app/src/main/res/layout/item_dog.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="dog"
+            type="co.paulfran.dogs.model.DogBreed"/>
+    </data>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -24,14 +29,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/Title"
-                android:text="Dog Name"/>
+                android:text="@{dog.dogBreed}"/>
 
             <TextView
                 android:id="@+id/lifespan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/Text"
-                android:text="Lifespan"/>
+                android:text="@{dog.lifeSpan}"/>
 
         </LinearLayout>
 
