--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -2,10 +2,19 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="dog"
+            type="co.paulfran.dogs.model.DogBreed" />
+        <variable
+            name="palette"
+            type="co.paulfran.dogs.model.DogPalette" />
+    </data>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@{palette.color}"
         tools:context=".view.DetailFragment">
 
         <ImageView
@@ -13,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:src="@mipmap/ic_dog_icon"
+            android:imageUrl="@{dog.imageUrl}"
             android:scaleType="fitCenter"
             android:minHeight="200dp"/>
 
@@ -25,7 +34,7 @@
             style="@style/Title"
             android:layout_centerHorizontal="true"
             android:layout_margin="4dp"
-            android:text="Dog Name"/>
+            android:text="@{dog.dogBreed}"/>
 
         <TextView
             android:id="@+id/dogPurpose"
@@ -35,7 +44,7 @@
             style="@style/Text"
             android:layout_centerHorizontal="true"
             android:layout_margin="4dp"
-            android:text="Dog Purpose"/>
+            android:text="@{dog.bredFor}"/>
 
         <TextView
             android:id="@+id/dogTemperament"
@@ -45,7 +54,7 @@
             style="@style/Text"
             android:layout_centerHorizontal="true"
             android:layout_margin="4dp"
-            android:text="Dog Temperament"/>
+            android:text="@{dog.temperament}"/>
 
         <TextView
             android:id="@+id/dogLifespan"
@@ -55,7 +64,7 @@
             style="@style/Text"
             android:layout_centerHorizontal="true"
             android:layout_margin="4dp"
-            android:text="Dog Lifespan"/>
+            android:text="@{dog.lifeSpan}"/>
 
     </RelativeLayout>
 </layout>
